fixing github page
fixing github page, overflows out of image

--- a/Trade-Offer/style.css
+++ b/Trade-Offer/style.css
@@ -32,7 +32,7 @@ body {
   top: 200;
   left: 0;
   min-width: auto;
-  max-width: 35vh;
+  max-width: 30vh;
   height: 100%;
   color: white;
   font-size: 22px;
@@ -49,7 +49,7 @@ body {
   top: 200;
   right: 0;
   min-width: auto;
-  max-width: 35vh;
+  max-width: 30vh;
   height: 100%;
   color: white;
   font-size: 22px;
